[package]
name = "porty"
authors = ["Jean Turgeon <jt@email.com>"]
license = "Apache-2.0"
description = "A simple port scanning utility"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1.0.75"
futures = "0.3.28"
clap = "4.4.6"
